# sphinx-common

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
sphinx_graphiql/: __init__.py  directives.py
sphinx_md2html/: __init__.py  directives.py
